--- a/index.html
+++ b/index.html
@@ -12,34 +12,31 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="wrapper swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="item blue swiper-slide">1</div>
-        <div class="item red swiper-slide">2</div>
-        <div class="item brown swiper-slide">3</div>
-        <div class="item tomato swiper-slide">4</div>
-        <div class="item greene swiper-slide">5</div>
-        <div class="item yellow swiper-slide">6</div>
-        <div class="item violet swiper-slide">7</div>
-        <div class="item gray swiper-slide">8</div>
-      </div>
+    <div class="swiper mySwiper wrapper">
+      <ul class="swiper-wrapper">
+        <li class="item blue swiper-slide">1</li>
+        <li class="item red swiper-slide">2</li>
+        <li class="item brown swiper-slide">3</li>
+        <li class="item tomato swiper-slide">4</li>
+        <li class="item greene swiper-slide">5</li>
+        <li class="item yellow swiper-slide">6</li>
+        <li class="item violet swiper-slide">7</li>
+        <li class="item gray swiper-slide">8</li>
+      </ul>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
-      <div class="swiper-pagination"></div>
     </div>
-    <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script>
       var swiper = new Swiper('.mySwiper', {
-        pagination: {
-          el: '.swiper-pagination',
-          clickable: true,
-        },
         navigation: {
           nextEl: '.swiper-button-next',
           prevEl: '.swiper-button-prev',
         },
         loop: true,
+        autoplay: {
+          delay: 500,
+        },
       });
     </script>
   </body>
